Updated TEC theme to fix bugs with positioning and wrapping elements.

--- a/themes/tec/scss/theme/_main.scss
+++ b/themes/tec/scss/theme/_main.scss
@@ -11,6 +11,12 @@
     @media #{$medium-up} {margin-top:rem-calc(-130px);
     }
 
+    .block-bundle-slideshow {
+        .block-title {
+            display: none;
+        }
+    }
+
     .df-tools-slideshow {
         .hero-block-fields {
             position: absolute;
